--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -680,6 +680,10 @@
     "createTask": "Créer une Tâche",
     "createDecision": "Créer une Décision",
     "edit": "Editer",
+    "move": "Déplacer",
+    "duplicate": "Dupliquer",
+    "archive": "Archiver",
+    "unarchive": "Désarchiver",
     "cancel": "Annuler",
     "delete": "Supprimer",
     "remove": "Retirer",
