Fix ActionsMenu translation

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -1,10 +1,6 @@
 {
   "ActionsMenu": {
-    "label": "Actions",
-    "edit": "Editer",
-    "duplicate": "Dupliquer",
-    "delete": "Supprimer",
-    "move": "Déplacer"
+    "label": "Actions"
   },
   "ActivityDeleteModal": {
     "heading": "Supprimer un message",
