Change button's tooltip in LogItem

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -183,7 +183,7 @@
     "canceled": "canceled the action:"
   },
   "LogItem": {
-    "cancel": "cancel this action."
+    "open": "See details"
   },
   "LogText": {
     "circleRoot": "the root",
