--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -183,7 +183,7 @@
     "canceled": "a annulé l'action :"
   },
   "LogItem": {
-    "cancel": "Annuler cette action"
+    "open": "Voir les détails"
   },
   "LogText": {
     "circleRoot": "la racine",
