Add button in header to access meeting templates (partial revert of dc0b1da)

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -155,6 +155,7 @@
     "members": "Members",
     "baseRoles": "Basic roles",
     "vacantRoles": "Vacant roles",
+    "meetingTemplates": "Meeting templates",
     "logs": "History",
     "superAdmin": "Admin"
   },
