--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -155,6 +155,7 @@
     "members": "Membres",
     "baseRoles": "Rôles de base",
     "vacantRoles": "Rôles vacants",
+    "meetingTemplates": "Modèles de réunion",
     "logs": "Historique",
     "superAdmin": "Admin"
   },
