--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -388,6 +388,7 @@
   },
   "MemberRoles": {
     "emptyRoles": "None",
+    "addRole": "Add a role",
     "totalAllocatedTime": "Total allocated time:",
     "alertTooMuchTime": "Total allocated time is too large, you need to lower the total time allocated to a role or increase the member's working time."
   },
