--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -432,6 +432,9 @@
   "ModalMaximizeButton": {
     "label": "Open in full page"
   },
+  "Notifications": {
+    "tooltip": "Notifications"
+  },
   "OnboardingCircleMembersModal": {
     "heading": "{{role}}",
     "leader": "Who represents the role {{role}}?",
@@ -712,6 +715,32 @@
       "Blocked": "Blocked",
       "Done": "Done",
       "NotDone": "Not done"
+    }
+  },
+  "notifications": {
+    "ThreadMessage": {
+      "title": "",
+      "content": ""
+    },
+    "TaskAssigned": {
+      "title": "",
+      "content": ""
+    },
+    "MeetingInvited": {
+      "title": "Meeting {{role}} - {{title}}",
+      "content": "Invitation by {{sender}}."
+    },
+    "MeetingStarted": {
+      "title": "",
+      "content": ""
+    },
+    "RoleAssigned": {
+      "title": "",
+      "content": ""
+    },
+    "Decision": {
+      "title": "",
+      "content": ""
     }
   },
   "useSearch": {
