Refactor task creation

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -738,6 +738,9 @@
       "content": ""
     }
   },
+  "useCreateTask": {
+    "toast": "Task created!"
+  },
   "useSearch": {
     "create": "Create \"{{name}}\""
   },
