--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -735,6 +735,9 @@
       "content": ""
     }
   },
+  "useCreateTask": {
+    "toast": "Tâche créée !"
+  },
   "useSearch": {
     "create": "Créer \"{{name}}\""
   },
