Improve member roles buttons

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -332,8 +332,8 @@
     "create": "New meeting"
   },
   "MemberContent": {
-    "notFound": "Member not found",
-    "roles": "Roles:"
+    "heading": "Roles",
+    "notFound": "Member not found"
   },
   "MemberCreateModal": {
     "heading": "Add Member"
